# argley-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
argley_macro/: Cargo.toml  README.md
argley_macro/src/: any_added_wrap.rs  container_opts.rs  field_ident.rs  field_opts.rs  lib.rs  parsed_fields.rs  parsed_variant.rs  struct_field.rs
argley_test/: Cargo.toml
argley_test/src/: lib.rs
src/: arg.rs  arg_consumer.rs  arg_impls.rs  lib.rs
