[package]
name = "argley_test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
argley = {path = "..", features = ["derive"]}
derive_more = {version = "0.99.17", features = ["display"], default-features = false}
static_assertions = "1.1"
